tests/bad_reserved_name_fn.stderr
tests/bad_reserved_name_fn.sl:2:4: error: SL2008: identifier prefix '__sl_' is reserved
tests/bad_reserved_name_fn.sl:2:4: hint: SL2008: rename symbol to avoid '__sl_' prefix
