tests/bad_reserved_name_fn.sl
fn __sl_bad() {}
